# hasta-la-vista-money

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .reviewdog.yml  .safety-project.ini  AGENTS.md  CHANGELOG.md  CONTEXT.md  ENGLISH.md  Makefile  README.md  SITE_TOUR_DOCUMENTATION.md  check_static_files.py  docker-compose.override.yml  docker-compose.prod.yaml  docker-compose.yaml  esbuild.config.mjs  eslint.config.mjs  manage.py  mint.json  mypy_output.txt  package-lock.json  package.json  pyproject.toml  release-please-config.json  renovate.json  requirements.txt  run_coverage.py  run_tests.py  setup.cfg  setup.py
.github/scripts/: check_migration_reversibility.py
.github/workflows/: bandit.yml  docker-publish.yml  hasta_la_vista_money.yaml  hasta_la_vista_money.yml  releases.yml  safety_scan.yml  semantic-pull-request.yml  semgrep.yml  summarize.yml  summary.yml
config/: __init__.py  asgi.py  celery.py  containers.py  env.py  middleware.py  urls.py  wsgi.py
config/django/: base.py  prod.py  sessions.py  validator_env.py
config/django/tests/: __init__.py  test_redis_cache.py  test_validator_env.py
config/settings/debug_toolbar/: settings.py  setup.py
core/: test_helpers.py  views.py
core/protocols/: services.py
core/repositories/: __init__.py  protocols.py
docker/: celery-entrypoint.sh  entrypoint.sh  local.Dockerfile  production.Dockerfile
docs/: CODE_STYLE.md  mkdocs.yml
docs/adr/: 0001-browser-qr-scanning-with-zxing-wasm.md
docs/docs/: cache.md  contribute.md  index.md  production_self_hosted.md  registration.md
docs/docs/api/: api_documentation.md  schema.json
docs/docs/expenses/: expenses_page.md
docs/docs/finance_account/: finance_account.md
docs/docs/income/: income_page.md
fixtures/: finance_account.yaml
frontend/js/: app.js  service-worker.js  swipe-list.js
hasta_la_vista_money/: __init__.py  compressor_middleware.py  constants.py  custom_mixin.py  exceptions.py  taskiq.py  types.py
hasta_la_vista_money/api/: __init__.py  pagination.py  schema.py  serializers.py  test_throttling.py  throttling.py  throttling_redis.py  urls.py
hasta_la_vista_money/authentication/: apis.py  authentication.py  urls.py  views.py
hasta_la_vista_money/budget/: api_urls.py  apis.py  containers.py  models.py  presentation.py  tests.py  urls.py  views.py
hasta_la_vista_money/commonlogic/: custom_paginator.py  forms.py  generate_dates.py  views.py
hasta_la_vista_money/core/: __init__.py  admin.py  apps.py  models.py  pagination.py  signals.py  types.py  views.py
hasta_la_vista_money/expense/: admin.py  api_urls.py  apis.py  containers.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
hasta_la_vista_money/finance_account/: __init__.py  admin.py  apis.py  apps.py  bank_constants.py  base_forms.py  containers.py  currencies.json  currencies.py  factories.py  forms.py  mixins.py  models.py  page_context_service.py  prepare.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
hasta_la_vista_money/fixtures/: categories.yaml  finance_account.yaml  transactions.yaml
hasta_la_vista_money/income/: admin.py  api_urls.py  apis.py  containers.py  filters.py  forms.py  managers.py  mixins.py  models.py  tests.py  urls.py  views.py
hasta_la_vista_money/loan/: apps.py  containers.py  forms.py  loan_calculator.py  models.py  tasks.py  tests.py  urls.py  views.py
hasta_la_vista_money/receipts/: admin.py  apis.py  containers.py  forms.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
hasta_la_vista_money/reports/: tasks.py  urls.py  views.py
hasta_la_vista_money/services/: generate_dates.py  income.py  views.py
hasta_la_vista_money/system/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
hasta_la_vista_money/templatags/: index.py  thousand_comma.py
hasta_la_vista_money/templates/: 404.html  500.html  _bottom_nav.html  _mobile_menu.html  base.html  button_remove.html  header.html
hasta_la_vista_money/templatetags/: dict_get.py  generate_hash.py  index.py  thousand_comma.py
hasta_la_vista_money/transactions/: admin.py  api_urls.py  apis.py  apps.py  commands.py  containers.py  filters.py  forms.py  managers.py  models.py  urls.py  views.py
hasta_la_vista_money/users/: admin.py  ajax_urls.py  api_urls.py  apis.py  apps.py  containers.py  factories.py  forms.py  groups_urls.py  middleware.py  models.py  tasks.py  urls.py  validators.py  views.py
nginx/: nginx.conf
receipt_inference/: Dockerfile  entrypoint.sh  pyproject.toml
receipt_inference/src/receipt_inference/: __init__.py  app.py  config.py  errors.py  pipeline.py  service.py
receipt_inference/tests/: test_paddleocr_vl_parsing.py
requirements/: dev.txt  prod.txt
scripts/: debug-permissions.sh  rebuild-docker.sh
static/: manifest.webmanifest  sw.js
static/css/: driver.css  styles.css  styles.css.map  styles.min.css  swipe-list.css
static/fonts/: local-fonts.css
static/js/: account_form.js  account_group_filter.js  add_loan_modern.js  app.js  balance_trend_widget.js  bank-statement-upload.js  bottom-nav.js  budget-forms.js  budget.js  chart-configs.js  chart-utils.js  dashboard.js  errors_form.js  expense-tabulator.js  expense_group_filter.js  expense_table.js  flatpickr-init.js  header.js  income-tabulator.js  income_group_filter.js  income_table.js  lazy-loader.js  loan.js  loan_modern.js  mathjax.js  mobile-menu.js  notifications.js  planning.js  profile-tabs.js  receipt-qr-core.mjs  receipt_filter.js  receipt_group_filter.js  receipt_update.js  receipts-filter.js  script.js  site-tour.js  swipe-actions.js  swipe-list.js  theme.js  tokens.js  (+2 more)
static/scss/: _account.css  _account.scss  _bottom_nav.scss  _buttons.scss  _dashboard.scss  _loan.scss  _mobile.scss  _skeleton.scss  _tabulator_expense.scss  _tabulator_income.scss  _toast.scss  _upload.css  _upload.scss  styles.css  styles.scss
templates/: base.html
tests/js/: receipt-qr-core.test.mjs
theme/static_src/: package-lock.json  package.json
(+442 files in other folders)
