[project]
name = "hastalavistamoney"
version = "1.5.5"
description = "Home Accounting Project"
authors = [
    {name = "Alexander Pavlov", email = "dev@pavlovteam.ru"}
]
requires-python = ">=3.12.7"
dependencies = [
    "python-dotenv>=1.0.0",
    "dj-database-url>=3.0.0",
    "psycopg2-binary>=2.9.3",
    "whitenoise>=6.0.0",
    "django-filter>=25.1",
    "PyYAML>=6.0",
    "django==5.2.3",
    "urllib3>=2.0.2",
    "django-csp>=4.0",
    "channels>=4.0.0",
    "Pillow>=11.0.0",
    "numpy>=2.0.0",
    "django-axes>=8.0.0",
    "Twisted[http2,tls]>=25.0.0",
    "python-dateutil>=2.8.2",
    "django-debug-toolbar>=5.0.0",
    "sentry-sdk>=2.22.0",
    "django-rosetta>=0.10.0",
    "crispy-bootstrap5>=2025.4",
    "django-crispy-forms>=2.1",
    "djangorestframework>=3.15.0",
    "django-stubs-ext>=5.1.1",
    "djangorestframework-simplejwt>=5.5.0",
    "openai>=1.84.0",
    "django-structlog>=9.1.1",
    "granian>=2.3.4",
    "kolo>=2.40.1",
]

[project.optional-dependencies]
dev = [
    "Faker>=37.0.0",
    "coverage>=7.3.2",
    "myst-parser>=4.0.0",
    "flower>=2.0.1",
    "pre-commit>=4.0.0",
    "yesqa>=1.5.0",
    "mypy>=1.5.1",
    "bump2version>=1.0.1",
    "icecream>=2.1.3",
    "werkzeug>=3.0.1",
    "django-extensions>=4.1",
    "ruff>=0.12.0",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.0",
    "mkdocs-material>=9.5.39",
    "django-stubs[compatible-mypy]>=5.1.0",
    "types-python-dateutil>=2.9.0.20241003",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hasta_la_vista_money"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
exclude = [
    "migrations",
    ".venv",
    ".git"
]

[mypy]
module = 'django.*'
ignore_missing_imports = true

[tool.mypy]
plugins = ['mypy_django_plugin.main']

[tool.django-stubs]
django_settings_module = 'config.django.base'
