[project]
name = "hastalavistamoney"
version = "1.10.0"
description = "Home Accounting Project"
authors = [
    {name = "Alexander Pavlov", email = "dev@pavlovteam.ru"}
]
requires-python = ">=3.12.7"
dependencies = [
    "dj-database-url>=3.0.0",
    "psycopg2-binary>=2.9.3",
    "whitenoise[brotli]>=6.0.0",
    "django-filter>=25.1",
    "PyYAML>=6.0",
    "django==6.0.2",
    "urllib3>=2.0.2",
    "django-csp>=4.0",
    "channels>=4.0.0",
    "Pillow>=11.0.0",
    "numpy>=2.0.0",
    "django-axes>=8.0.0",
    "Twisted[http2,tls]>=25.0.0",
    "python-dateutil>=2.8.2",
    "django-debug-toolbar>=5.0.0",
    "sentry-sdk>=2.22.0",
    "django-rosetta>=0.10.0",
    "django-crispy-forms>=2.1",
    "djangorestframework>=3.15.0",
    "django-stubs-ext>=5.1.1",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.27.0",
    "openai>=1.84.0",
    "django-structlog>=9.1.1",
    "granian[reload]>=2.3.4",
    "django-extensions>=4.1",
    "djangorestframework-stubs>=3.16.1",
    "django-stubs[compatible-mypy]>=5.2.1",
    "django-cors-headers>=4.7.0",
    "python-decouple>=3.8",
    "django-redis>=6.0.0",
    "django-compressor>=4.5.1",
    "pyright>=1.1.407",
    "types-django-filter>=25.2.0.20251010",
    "dependency-injector>=4.48.2",
    "django-tailwind>=4.4.2",
    "crispy-tailwind>=1.0.3",
    "camelot-py[base]>=1.0.9",
    "celery>=5.4.0",
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "Faker>=37.0.0",
    "coverage>=7.3.2",
    "myst-parser>=4.0.0",
    "flower>=2.0.1",
    "pre-commit>=4.0.0",
    "yesqa>=1.5.0",
    "mypy>=1.5.1",
    "bump2version>=1.0.1",
    "icecream>=2.1.3",
    "werkzeug>=3.0.1",
    "django-extensions>=4.1",
    "ruff>=0.12.0",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.0",
    "mkdocs-material>=9.5.39",
    "mkdocs-render-swagger-plugin>=0.1.2",
    "django-stubs[compatible-mypy]>=5.1.0",
    "types-python-dateutil>=2.9.0.20241003",
]

[dependency-groups]
dev = [
    "coverage>=7.3.2",
    "myst-parser>=4.0.0",
    "flower>=2.0.1",
    "pre-commit>=4.0.0",
    "yesqa>=1.5.0",
    "mypy>=1.5.1",
    "bump2version>=1.0.1",
    "icecream>=2.1.3",
    "werkzeug>=3.0.1",
    "django-extensions>=4.1",
    "ruff>=0.12.0",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.0",
    "mkdocs-material>=9.5.39",
    "mkdocs-render-swagger-plugin>=0.1.2",
    "django-stubs[compatible-mypy]>=5.1.0",
    "types-python-dateutil>=2.9.0.20241003",
    "safety>=3.6.2",
    "factory-boy>=3.3.0",
    "django-tailwind[cookiecutter,honcho,reload]>=4.4.2",
]

[[tool.uv.index]]
name = "safety"
url = "https://pkgs.safetycli.com/repository/pavlovteam/project/hastalavistamoney/pypi/simple/"
default = false
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hasta_la_vista_money"]

[tool.ruff]
line-length = 80
exclude = [
    "**/migrations/*",
    "**/__init__",
    ".git",
    "__pycache__",
    "manage.py"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
exclude = [
    "migrations",
    ".venv",
    ".git"
]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = [
    "D100", "D101", "D102", "D104", "D105", "D106", "E203", "COM812", "Q000", "Q003", "PT009", "RUF001", "RUF002", "PLR0913", "FBT001", "FBT002", "ARG002", "RUF012", "PT027", "TRY301", "TRY003", "EM101",
]
external = [ "WPS" ]

[tool.ruff.lint.isort]
known-first-party = ["hasta_la_vista_money"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = [
  "S101", # asserts
  "S105", # hardcoded passwords
  "S404", # subprocess calls are for tests
  "S603", # do not require `shell=True`
  "S607", # partial executable paths
  "SLF001", # private member access in tests
  "PD901", # df is acceptable in tests
]
"**/test_*.py" = [
  "SLF001", # private member access in tests
  "S106",
  "PD901", # df is acceptable in tests
]
"**/tests.py" = [
  "SLF001", # private member access in tests
  "S106",
  "PD901", # df is acceptable in tests
]
"**/forms.py" = [
  "RUF012", # Django Meta classes don't support ClassVar
]
"hasta_la_vista_money/finance_account/models.py" = [
  "PLC0415",
]
"hasta_la_vista_money/receipts/services/receipt_ai_prompt.py" = [
  "E501",
]
"hasta_la_vista_money/receipts/apis.py" = [
  "C901", # _process_request complexity is acceptable
]
"hasta_la_vista_money/income/views.py" = [
  "E501", # long translation strings
]
"hasta_la_vista_money/loan/views.py" = [
  "S101", # asserts for type narrowing
]
"hasta_la_vista_money/api/test_throttling.py" = [
  "S101", # asserts for type narrowing
]
"hasta_la_vista_money/authentication/authentication.py" = [
  "TRY300", # else block after return is unnecessary
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main",
]
files = ["hasta_la_vista_money/"]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
follow_imports = "silent"
ignore_missing_imports = true
strict_equality = true
exclude = ["migrations"]
enable_error_code = ["ignore-without-code","redundant-expr","truthy-bool"]
disable_error_code = ["import"]

[tool.django-stubs]
django_settings_module = "config.django.base"

[[tool.mypy.overrides]]
module = ["*.tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["*.models"]
disable_error_code = ["var-annotated"]

[tool.coverage.run]
branch = true
omit = [
    "*/dependency_injector/*",
    "*/site-packages/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 85

[tool.pytest.ini_options]
norecursedirs = ["__pycache__"]
addopts = "--strict-markers"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
default_section = "FIRSTPARTY"
line_length = 80
force_single_line = false
known_django = "django"
known_first_party = "hasta_la_vista_money"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.bumpversion]
current_version = "1.10.0"
commit = false
tag = true

[[tool.bumpversion.files]]
filename = "hasta_la_vista_money/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[tool.bumpversion."file:setup.cfg"]
search = "current_version = {current_version}"
replace = "current_version = {new_version}"

[tool.bumpversion."file:pyproject.toml"]
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
