[project]
name = "receipt-inference"
version = "0.1.0"
description = "Internal receipt OCR and LLM inference service"
requires-python = ">=3.12,<3.13"
dependencies = [
    "granian>=2.3.4",
    "httpx>=0.28.0",
    "orjson>=3.11.0",
    "Pillow>=11.0.0",
    "starlette>=0.48.0",
    "structlog>=25.4.0",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/receipt_inference"]
